Fix horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   font-size: 1.3rem;
   background:#111;
   color: #f5f5f5;
+  overflow-x: hidden;
 }
 body:after {
   position: absolute;
